--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+config.py
+
+# pdm files
+.pdm.toml
+pdm.lock
+
+*.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +135,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
